trunk/Archive2/d2/725d188c615173/output
main.cpp:1:109: error: calling a protected constructor of class 'Base'
class Base { protected: Base(int); }; struct Derived: Base { Derived() : Base(42) { static_assert(!noexcept(Base(42)), "Err"); } };
                                                                                                            ^
main.cpp:1:25: note: protected constructor can only be used to construct a base class subobject
class Base { protected: Base(int); }; struct Derived: Base { Derived() : Base(42) { static_assert(!noexcept(Base(42)), "Err"); } };
                        ^
1 error generated.
